--- a/css/admin.css
+++ b/css/admin.css
@@ -4,31 +4,45 @@ body {
     line-height: 1.5;
     font-style: normal;
     letter-spacing: 0.02em;
-     display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0; /* убрать отступы браузера */
+    padding-top: 150px; /* немного отступ сверху для первого заголовка */
+}
+
+.container {
+    text-align: center; /* центрируем текст */
+    max-width: 800px; /* ограничим ширину для удобства */
 }
 
 .casadeAmigos {
-      background-position: center;
-      color: #223580;
-      font-size: 80px;
-      top: 100px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10;
-      margin-left: 300px;
-    }
+    color: #223580;
+    font-size: 80px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0; /* убрать дефолтные отступы */
+}
 
+.zagolovok {
+    color: #223580;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 1.3;
+    margin-top: 10px; /* расстояние между заголовками: можно 5-16px */
+    margin-bottom: 0;
+}
 
 .mozaika1left {
-    left: 0;
+     left: 0;
     font-size: 95px;
-
     position: fixed;
     top: 0;
     height: 100vh;
     width: auto;
     z-index: 1; 
 }
+
+
+
