--- a/css/admin.css
+++ b/css/admin.css
@@ -44,5 +44,59 @@ body {
     z-index: 1; 
 }
 
+.casadeAmigos {
+      background-position: center;
+      color: #223580;
+      font-size: 50px;
+      top: 100px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+      opacity: 0;
+      transform: translateY(50px); /* начальная позиция — чуть ниже */
+      animation: slideUpFadeIn 1s ease-out forwards;
+      animation-delay: 1.4s;
+    }
+
+    @keyframes slideUpFadeIn {
+      to {
+        opacity: 1;
+        transform: translateY(0); /* финальная позиция */
+      }
+    }
+
+.page-wrapper {
+position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  margin-top: -80px;
+}
+
+.deco,
+.decoacrylic {
+position: absolute;
+  max-width: auto;
+  height: auto;
+  opacity: 0;
+  transform: translateY(50px);
+  animation: riseUp 1s ease-out forwards;
+}
 
 
+
+.deco-1 { animation-delay: 0s; }
+.deco-2 { animation-delay: 0.2s; }
+.deco-3 { animation-delay: 0.4s; }
+.deco-4 { animation-delay: 0.6s; }
+.deco-5 { animation-delay: 0.8s; }
+
+.acrylic-1 { animation-delay: 1s; }
+.acrylic-2 { animation-delay: 1.2s; }
+
+@keyframes riseUp {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
