--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -19,7 +19,16 @@ body {
       left: 50%;
       transform: translateX(-50%);
       z-index: 10;
-      margin-left: 300px;
+      opacity: 0;
+      transform: translateY(50px); /* начальная позиция — чуть ниже */
+      animation: slideUpFadeIn 1s ease-out forwards;
+    }
+
+    @keyframes slideUpFadeIn {
+      to {
+        opacity: 1;
+        transform: translateY(0); /* финальная позиция */
+      }
     }
 
 
@@ -59,7 +68,7 @@ body {
 .login-box {
       background: white;
       display: inline-block;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      box-shadow: 0 0 10px rgba(222, 222, 222, 0.2);
       border: 2px solid #223580;
       border-radius: 20px;
       padding: 40px 30px;
