--- a/css/admin.css
+++ b/css/admin.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Playfair Display SC', serif;
-    background-color: #D2E5F8;
+    background-color: #f7f3eb;
     line-height: 1.5;
     font-style: normal;
     letter-spacing: 0.02em;
@@ -9,7 +9,7 @@ body {
     align-items: center;
     min-height: 100vh;
     margin: 0; /* убрать отступы браузера */
-    padding-top: 150px; /* немного отступ сверху для первого заголовка */
+    padding-top: 50px; /* немного отступ сверху для первого заголовка */
 }
 
 .container {
@@ -22,12 +22,12 @@ body {
     font-size: 80px;
     font-weight: 400;
     line-height: 1.5;
-    margin: 0; /* убрать дефолтные отступы */
+    margin: 10; /* убрать дефолтные отступы */
 }
 
 .zagolovok {
     color: #223580;
-    font-size: 40px;
+    font-size: 25px;
     font-weight: 400;
     line-height: 1.3;
     margin-top: 10px; /* расстояние между заголовками: можно 5-16px */
@@ -70,7 +70,7 @@ position: relative;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  margin-top: -80px;
+  margin-top: -150px;
 }
 
 .deco,
