--- a/css/admin.css
+++ b/css/admin.css
@@ -17,22 +17,65 @@ body {
     max-width: 800px; /* ограничим ширину для удобства */
 }
 
+
 .casadeAmigos {
+    background-position: center;
     color: #223580;
-    font-size: 80px;
+    font-size: 50px;
     font-weight: 400;
     line-height: 1.5;
     margin: 10; /* убрать дефолтные отступы */
-}
+    top: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+    opacity: 0;
+    transform: translateY(50px); /* начальная позиция — чуть ниже */
+    animation: slideUpFadeIn 1s ease-out forwards;
+    animation-delay: 1.4s;
+    }
+
+    @keyframes slideUpFadeIn {
+      to {
+        opacity: 1;
+        transform: translateY(0); /* финальная позиция */
+      }
+    }
 
 .zagolovok {
     color: #223580;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 400;
     line-height: 1.3;
     margin-top: 10px; /* расстояние между заголовками: можно 5-16px */
     margin-bottom: 0;
+    text-align: center; /* центрируем текст */
+    margin-top: 5px; 
+    margin-bottom: 0;
+    font-family: 'Yeseva One', sans-serif;
 }
+
+.zagolovok1 {
+    color: #c3d3f5;
+    text-align: center; /* центрируем текст */
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.3;
+    margin-top: 5px; 
+    margin-bottom: 0;
+    font-family: 'Yeseva One', sans-serif;
+    opacity: 0; /* начальная прозрачность */
+     transform: translateY(20px); /* начальное смещение вниз */
+    animation: slideUpFadeAn 1s ease-out forwards;
+      animation-delay: 1.8s;   
+}
+
+@keyframes slideUpFadeAn {
+      to {
+        opacity: 1;
+        transform: translateY(0); /* финальная позиция */
+      }
+      }
 
 .mozaika1left {
      left: 0;
@@ -44,26 +87,7 @@ body {
     z-index: 1; 
 }
 
-.casadeAmigos {
-      background-position: center;
-      color: #223580;
-      font-size: 50px;
-      top: 100px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10;
-      opacity: 0;
-      transform: translateY(50px); /* начальная позиция — чуть ниже */
-      animation: slideUpFadeIn 1s ease-out forwards;
-      animation-delay: 1.4s;
-    }
 
-    @keyframes slideUpFadeIn {
-      to {
-        opacity: 1;
-        transform: translateY(0); /* финальная позиция */
-      }
-    }
 
 .page-wrapper {
 position: relative;
